changed card size

--- a/houses.html
+++ b/houses.html
@@ -133,8 +133,8 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
-<img src="images/houses/historichouse.jpg" alt="Regal Palmhouse" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/822b96e6-d429-47b1-8d67-958ad2f0eb52.c10.jpg-->
+<img src="images/houses/historichouse.jpg" alt="Historic Renaissance House" class="products">
 <div class="showcase_text">
 	<h4>Historic Renaissance House</h4>
 	<p> This historic luxurious stone house was built in 1897 by Lord Rieger's family. </p>
@@ -143,6 +143,22 @@
 		<li>House: 2100 sq. ft.</li>
 		<li>Rooms: 5 Bedrooms with King size beds. 1 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
 		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen, Movie room.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
+	</ul>
+</div>
+</a>
+
+<a href="enquiry.html" class="showcase_card_products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/c8ed2a2f-1422-4150-8c12-73c64094b33f.c10.jpg-->
+<img src="images/houses/victorianhouse.jpg" alt="The Victorian Magic" class="products">
+<div class="showcase_text">
+	<h4>The Victorian Magic</h4>
+	<p> This Victorian inspired home was newly built in the 1980s. Feel the fresh air of the mountains and open lakeview.</p>
+	<ul>
+		<li>Monthly rate: RM 2600</li>
+		<li>House: 2250 sq. ft.</li>
+		<li>Rooms: 5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen, Movie room.</li>
 		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
