--- a/houses.html
+++ b/houses.html
@@ -142,8 +142,8 @@
 		<li>Monthly rate: RM 2600</li>
 		<li>House: 2100 sq. ft.</li>
 		<li>Rooms: 5 Bedrooms with King size beds. 1 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
-		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen, Movie room.</li>
-		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
 	</ul>
 </div>
 </a>
@@ -158,8 +158,24 @@
 		<li>Monthly rate: RM 2600</li>
 		<li>House: 2250 sq. ft.</li>
 		<li>Rooms: 5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
-		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen, Movie room.</li>
-		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
+	</ul>
+</div>
+</a>
+
+<a href="enquiry.html" class="showcase_card_products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/6273d99f-6831-4c87-8de3-ff82623a7b71.c10.jpg-->
+<img src="images/houses/tuscanyhouse.jpg" alt=" The Tuscany Classic" class="products">
+<div class="showcase_text">
+	<h4>The Tuscany Classic</h4>
+	<p> The Tuscany Classic is a beautiful architectural marvel made to serve the elite. Welcome to your dream house!</p>
+	<ul>
+		<li>Monthly rate: RM 3000</li>
+		<li>House: 2500 sq. ft.</li>
+		<li>Rooms:  5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room.
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen, Guest Hall.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
 	</ul>
 </div>
 </a>
