--- a/houses.html
+++ b/houses.html
@@ -141,9 +141,9 @@
 	<ul>
 		<li>Monthly rate: RM 2600</li>
 		<li>House: 2100 sq. ft.</li>
-		<li>Rooms: 5 Bedrooms with King size beds. 1 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
+		<li>Rooms: 5 Bedrooms with King size beds. 1 Living Rooms. 3 Bathrooms. Formal Dining Room, Movie room.</li>
 		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Shower, Kitchen.</li>
-		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
 </a>
@@ -157,25 +157,41 @@
 	<ul>
 		<li>Monthly rate: RM 2600</li>
 		<li>House: 2250 sq. ft.</li>
-		<li>Rooms: 5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room.</li>
+		<li>Rooms: 5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room, Movie room.</li>
 		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen.</li>
-		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
 	</ul>
 </div>
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
 <!--Image taken from https://odis.homeaway.com/odis/listing/6273d99f-6831-4c87-8de3-ff82623a7b71.c10.jpg-->
-<img src="images/houses/tuscanyhouse.jpg" alt=" The Tuscany Classic" class="products">
+<img src="images/houses/tuscanyhouse.jpg" alt="The Tuscany Classic" class="products">
 <div class="showcase_text">
 	<h4>The Tuscany Classic</h4>
 	<p> The Tuscany Classic is a beautiful architectural marvel made to serve the elite. Welcome to your dream house!</p>
 	<ul>
 		<li>Monthly rate: RM 3000</li>
 		<li>House: 2500 sq. ft.</li>
-		<li>Rooms:  5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room.
-		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen, Guest Hall.</li>
-		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Movie room. </li>
+		<li>Rooms:  5 Bedrooms with King size beds. 2 Living Rooms. 3 Bathrooms. Formal Dining Room, Guest Hall, Movie room.</li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden. </li>
+	</ul>
+</div>
+</a>
+
+<a href="enquiry.html" class="showcase_card_products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/af43ecaa-1153-4280-9f4a-1442b3b5a193.c10.jpg-->
+<img src="images/houses/spanishpalazzo.jpg" alt="The Spanish Palazzo" class="products">
+<div class="showcase_text">
+	<h4>The Spanish Palazzo</h4>
+	<p> The Spanish Palazzo is a house fit for even the most demanding of guests. Purely unmatched paradise on earth! </p>
+	<ul>
+		<li>Monthly rate: RM 5500</li>
+		<li>House: 4000 sq. ft.</li>
+		<li>Rooms:  7 Bedrooms with King size beds. 3 Living Rooms. 5 Bathrooms. Formal Dining Room, Guest Hall, Balcony, Movie room.</li>
+		<li>Amenities: Wifi, TV, Washer, Air Conditioning, Hot Tub, Kitchen.</li>
+		<li>Extras: Barbeque Grill Pit, Free Parking, Garden, Pool, Sauna.</li>
 	</ul>
 </div>
 </a>
