--- a/houses.html
+++ b/houses.html
@@ -53,8 +53,11 @@
 <!-- photocard links -->
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/0f3cf0c3-b223-4484-a949-38cfcbee0040.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/smalldowntownhome.jpg" alt="Small Downtown Home" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/0f3cf0c3-b223-4484-a949-38cfcbee0040.c10.jpg-->
+<div class="bottom_left">Kuching</div>
+</div>
 <div class="showcase_text">
 	<h4>Small Downtown Home</h4>
 	<p> This 1910's house (Remodel 2009) is full of charm with entertainment, restaurants, shopping, etc nearby. </p>
@@ -69,8 +72,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/9e2727e2-0aad-4eb0-a273-6a82f8ed7d7d.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/BlueRidgeFarmhouse.jpg" alt="Blue Ridge Farmhouse" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/9e2727e2-0aad-4eb0-a273-6a82f8ed7d7d.c10.jpg-->
+<div class="bottom_left">Ipoh</div>
+</div>
 <div class="showcase_text">
 	<h4>Blue Ridge Farmhouse</h4>
 	<p> This classic Hardwood-made farmhouse is perfect for a countryhouse relaxation trip. </p>
@@ -85,8 +91,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/79296671-1554-44c6-b0b3-11c2f2a4d797.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/Forestretreatcottage.jpg" alt="Forest Retreat Cottage" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/79296671-1554-44c6-b0b3-11c2f2a4d797.c10.jpg-->
+<div class="bottom_left">Johor Bahru</div>
+</div>
 <div class="showcase_text">
 	<h4>Forest Retreat Cottage</h4>
 	<p> Are you looking for a private escape in the woodlands with all of the comforts of home? Then, look no further! </p>
@@ -101,8 +110,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/townhouse.jpg" alt="Southern Belle Townhouse" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/f764043c-c879-4ac2-991c-39baf3cb22de.c10.jpg-->
+<div class="bottom_left">Penang</div>
+</div>
 <div class="showcase_text">
 	<h4>Southern Belle Townhouse</h4>
 	<p> Step inside the fabulous Square Manor, you will be transported to a simpler time... 1899 Georgetown! </p>
@@ -117,8 +129,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/0d771ae4-b14b-42a5-a441-b979c5ae9bcf.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/palmhouse.jpg" alt="Regal Palmhouse" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/0d771ae4-b14b-42a5-a441-b979c5ae9bcf.c10.jpg-->
+<div class="bottom_left">Kuala Lumpur</div>
+</div>
 <div class="showcase_text">
 	<h4>Regal Palmhouse</h4>
 	<p> Welcome to Regal Palmhouse. Here you will enjoy your stay with the beach a mere 2 miles away </p>
@@ -133,8 +148,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/822b96e6-d429-47b1-8d67-958ad2f0eb52.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/historichouse.jpg" alt="Historic Renaissance House" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/822b96e6-d429-47b1-8d67-958ad2f0eb52.c10.jpg-->
+<div class="bottom_left">Kuching</div>
+</div>
 <div class="showcase_text">
 	<h4>Historic Renaissance House</h4>
 	<p> This historic luxurious stone house was built in 1897 by Lord Rieger's family. </p>
@@ -149,8 +167,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/c8ed2a2f-1422-4150-8c12-73c64094b33f.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/victorianhouse.jpg" alt="The Victorian Magic" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/c8ed2a2f-1422-4150-8c12-73c64094b33f.c10.jpg-->
+<div class="bottom_left">Subang Jaya</div>
+</div>
 <div class="showcase_text">
 	<h4>The Victorian Magic</h4>
 	<p> This Victorian inspired home was newly built in the 1980s. Feel the fresh air of the mountains and open lakeview.</p>
@@ -165,8 +186,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/6273d99f-6831-4c87-8de3-ff82623a7b71.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/tuscanyhouse.jpg" alt="The Tuscany Classic" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/6273d99f-6831-4c87-8de3-ff82623a7b71.c10.jpg-->
+<div class="bottom_left">Kota Kinabalu</div>
+</div>
 <div class="showcase_text">
 	<h4>The Tuscany Classic</h4>
 	<p> The Tuscany Classic is a beautiful architectural marvel made to serve the elite. Welcome to your dream house!</p>
@@ -181,8 +205,11 @@
 </a>
 
 <a href="enquiry.html" class="showcase_card_products">
-<!--Image taken from https://odis.homeaway.com/odis/listing/af43ecaa-1153-4280-9f4a-1442b3b5a193.c10.jpg-->
+<div class="photo_container">
 <img src="images/houses/spanishpalazzo.jpg" alt="The Spanish Palazzo" class="products">
+<!--Image taken from https://odis.homeaway.com/odis/listing/af43ecaa-1153-4280-9f4a-1442b3b5a193.c10.jpg-->
+<div class="bottom_left">Kuala Lumpur</div>
+</div>
 <div class="showcase_text">
 	<h4>The Spanish Palazzo</h4>
 	<p> The Spanish Palazzo is a house fit for even the most demanding of guests. Purely unmatched paradise on earth! </p>
