--- a/enquiry.html
+++ b/enquiry.html
@@ -53,7 +53,7 @@
 <div class="content_box">
 
 <br/>
-<div class="content_banner">Send us a message!</div>
+<div class="content_banner">SUBMIT YOUR ENQUIRY HERE</div>
 
 <div>
 	<form>
