--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
 <br/>
 <hr/>
 <h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
-<img class="intro_photos" src="images/ind_thumbnail.jpg">
-<img class="intro_photos" src="images/shop_thumbnail.jpg">
-<img class="intro_photos" src="images/off_thumbnail.jpg">
-<img class="intro_photos" src="images/liv_thumbnail.jpg">
+<div style="margin: auto;">
+	<img class="intro_photos" src="images/ind_thumbnail.jpg">
+	<img class="intro_photos" src="images/shop_thumbnail.jpg">
+	<img class="intro_photos" src="images/off_thumbnail.jpg">
+	<img class="intro_photos" src="images/liv_thumbnail.jpg">
+</div>
 <br/>
 <hr/>
 <br/>
@@ -65,7 +67,7 @@
 <div class="content_box">
 
 <br/>
-<div class="content_banner">Latest Projects</div>
+<div class="content_banner">LATEST PROJECTS</div>
 
 <!-- photocard links -->
 
