--- a/product.html
+++ b/product.html
@@ -105,7 +105,7 @@
 
 
 <br/>
-<div class="content_banner">Properties For You</div>
+<div class="content_banner">PROPERTIES FOR YOU</div>
 
 <!-- photocard links -->
 
