--- a/enquiry.html
+++ b/enquiry.html
@@ -111,7 +111,16 @@
 			<option value="Medium-sized shop">Medium-sized shop (Subang Jaya)</option>
 			<option value="Medium-sized shop">Medium-sized shop (Kota Kinabalu)</option>
 			<option value="Large-sized shop">Large-sized shop (Kuching)</option>
-			<option value="Premium shop">Premium shop (Kuala Lumpur)</option>
+			
+			<option value="Small Downtown Home">Premium shop (Kuala Lumpur)</option>
+			<option value="Blue Ridge Farmhouse">Premium shop (Kuala Lumpur)</option>
+			<option value="Forest Retreat Cottage">Forest Retreat Cottage</option>
+			<option value="Southern Belle Townhouse">Southern Belle Townhouse</option>
+			<option value="Regal Palmhouse">Regal Palmhouse</option>
+			<option value="Historic Renaissance House">Historic Renaissance House</option>
+			<option value="The Victorian Magic">The Victorian Magic</option>
+			<option value="The Tuscany Classic">The Victorian Magic</option>
+			<option value="The Spanish Palazzo">The Spanish Palazzo</option>
 			</select> 	
 		<label>Rental duration (months)<input type="number" name="rentalduration" min="0" max="200" value="1" required="required"/></label>
 		<input type="message" id="message" name="enquiry" placeholder="State the reason for your enquiry" size="10" required="required"/>
