--- a/enquiry.html
+++ b/enquiry.html
@@ -111,9 +111,9 @@
 			<option value="Medium-sized shop">Medium-sized shop (Subang Jaya)</option>
 			<option value="Medium-sized shop">Medium-sized shop (Kota Kinabalu)</option>
 			<option value="Large-sized shop">Large-sized shop (Kuching)</option>
-			
-			<option value="Small Downtown Home">Premium shop (Kuala Lumpur)</option>
-			<option value="Blue Ridge Farmhouse">Premium shop (Kuala Lumpur)</option>
+			<option value="Premium shop (Kuala Lumpur)">Premium shop (Kuala Lumpur)</option>
+			<option value="Small Downtown Home">Small Downtown Home</option>
+			<option value="Blue Ridge Farmhouse">Blue Ridge Farmhouse</option>
 			<option value="Forest Retreat Cottage">Forest Retreat Cottage</option>
 			<option value="Southern Belle Townhouse">Southern Belle Townhouse</option>
 			<option value="Regal Palmhouse">Regal Palmhouse</option>
