--- a/enquiry.html
+++ b/enquiry.html
@@ -119,7 +119,7 @@
 			<option value="Regal Palmhouse">Regal Palmhouse</option>
 			<option value="Historic Renaissance House">Historic Renaissance House</option>
 			<option value="The Victorian Magic">The Victorian Magic</option>
-			<option value="The Tuscany Classic">The Victorian Magic</option>
+			<option value="The Tuscany Classic">The Tuscany Classic</option>
 			<option value="The Spanish Palazzo">The Spanish Palazzo</option>
 			</select> 	
 		<label>Rental duration (months)<input type="number" name="rentalduration" min="0" max="200" value="1" required="required"/></label>
