--- a/product.html
+++ b/product.html
@@ -60,7 +60,7 @@
 	<div class="product_text_headline">
 		<h5>APARTMENTS</h5>
 	</div>
-	<img src="images/apartment.jpg" style="width: 300px; height: 200px;">
+	<img src="images/apartment.jpg" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
 	apartments to call your new home
@@ -70,10 +70,10 @@
 	<div class="product_text_headline">
 		<h5>HOUSES</h5>
 	</div>
-	<img src="images/penang.jpg" style="width: 300px; height: 200px;">
+	<img src="images/houses/townhouse.jpg" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
-	apartments to call your new home
+	house to call your new home
 	</div>
 	</a>
 </div>
@@ -84,20 +84,20 @@
 	<div class="product_text_headline">
 		<h5>OFFICES</h5>
 	</div>
-	<img src="images/office.jpg" style="width: 300px; height: 200px;">
+	<img src="images/office.jpg" class="products"">
 	<div class="product_text">
 	Choose from a list of stylish new
-	offices to call your new work area
+	offices to call your new working area
 	</div>
 	</a>
 	<a href="shops.html" class="product_card">
 	<div class="product_text_headline">
 		<h5>SHOPS</h5>
 	</div>
-	<img src="images/shop_thumbnail.jpg" style="width: 300px; height: 200px;">
+	<img src="images/shop_thumbnail.jpg" class="products">
 	<div class="product_text">
 	Choose from a list of stylish new
-	apartments to call your new home
+	shops to call your new working area
 	</div>
 	</a>
 </div>
