--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <br/>
 <hr/>
 <h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
-<div style="margin: auto;">
+<div class="centering_index">
 	<img class="intro_photos" src="images/ind_thumbnail.jpg">
 	<img class="intro_photos" src="images/shop_thumbnail.jpg">
 	<img class="intro_photos" src="images/off_thumbnail.jpg">
