--- a/shops.html
+++ b/shops.html
@@ -53,117 +53,121 @@
 <br/>
 <h3>Shops</h3>
 
+<div class="centering">
+
 <!-- photocard links -->
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/small_sized_shop.jpg" class="products">
-	<!--Image taken from https://my-infinity.co.uk/shops/small-boutique-interior-design-ideas-small-clothing-store-interior-design-download-3d-house-interior-window-molding-ideas/-->
-		<div class="bottom_left">Johor Bahru</div>
-</div>
-<div class="showcase_text">
-	<h4>Small-sized shop</h4>
-	<ul>
-		<li>Monthly rate: RM 700</li> 
-		<li>Floor size: 500sqft</li> 
-		<li>RM 1.40 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Lifts, restrooms</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/small_sized_shop.jpg" class="products">
+		<!--Image taken from https://my-infinity.co.uk/shops/small-boutique-interior-design-ideas-small-clothing-store-interior-design-download-3d-house-interior-window-molding-ideas/-->
+			<div class="bottom_left">Johor Bahru</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Small-sized shop</h4>
+		<ul>
+			<li>Monthly rate: RM 700</li> 
+			<li>Floor size: 500sqft</li> 
+			<li>RM 1.40 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Lifts, restrooms</li>
+		</ul>
+	</div>
+	</a>
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/small_sized_shop2.jpg" class="products">
-	<!--Image taken from https://apartmentsbronx.us/small-boutique-interior-design-ideas.html-->
-	<div class="bottom_left">Kuching</div>
-</div>
-<div class="showcase_text">
-	<h4>Small-sized shop</h4>
-	<ul>
-		<li>Monthly rate: RM 800</li> 
-		<li>Floor size: 600sqft</li> 
-		<li>RM 1.60 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Lifts, restrooms</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/small_sized_shop2.jpg" class="products">
+		<!--Image taken from https://apartmentsbronx.us/small-boutique-interior-design-ideas.html-->
+		<div class="bottom_left">Kuching</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Small-sized shop</h4>
+		<ul>
+			<li>Monthly rate: RM 800</li> 
+			<li>Floor size: 600sqft</li> 
+			<li>RM 1.60 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Lifts, restrooms</li>
+		</ul>
+	</div>
+	</a>
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/medium_sized_shop.jpg" class="products">
-	<!--Image taken from http://tuaim.me/cafe-shop-design/cafe-shop-design-coffee-shop-interior-design-services-contracting-coffee-shop-design-small/-->
-	<div class="bottom_left">Subang Jaya</div>
-</div>
-<div class="showcase_text">
-	<h4>Medium-sized shop</h4>
-	<ul>
-		<li>Monthly rate: RM 1,400</li> 
-		<li>Floor size: 1400sqft</li> 
-		<li>RM 1.20 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Lifts, restrooms, car parking bays</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/medium_sized_shop.jpg" class="products">
+		<!--Image taken from http://tuaim.me/cafe-shop-design/cafe-shop-design-coffee-shop-interior-design-services-contracting-coffee-shop-design-small/-->
+		<div class="bottom_left">Subang Jaya</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Medium-sized shop</h4>
+		<ul>
+			<li>Monthly rate: RM 1400</li> 
+			<li>Floor size: 1400sqft</li> 
+			<li>RM 1.20 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Lifts, restrooms, car parking bays</li>
+		</ul>
+	</div>
+	</a>
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/medium_sized_shop2.jpg" class="products">
-	<!--Image taken from http://thesmartmarketing.me/coffee-shop-interior-design-ideas/coffee-shop-interior-design-ideas-coffee-shop-lighting-modern-fine-dining-restaurant-design-of-the-coffee-shop-coffee-shop-interior-design-pictures/-->
-	<div class="bottom_left">Kota Kinabalu</div>
-</div>
-<div class="showcase_text">
-	<h4>Medium-sized shop</h4>
-	<ul>
-		<li>Monthly rate: RM 2,000</li> 
-		<li>Floor size: 1900sqft</li> 
-		<li>RM 1.80 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Lifts, restrooms, car parking bays</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/medium_sized_shop2.jpg" class="products">
+		<!--Image taken from http://thesmartmarketing.me/coffee-shop-interior-design-ideas/coffee-shop-interior-design-ideas-coffee-shop-lighting-modern-fine-dining-restaurant-design-of-the-coffee-shop-coffee-shop-interior-design-pictures/-->
+		<div class="bottom_left">Kota Kinabalu</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Medium-sized shop</h4>
+		<ul>
+			<li>Monthly rate: RM 2000</li> 
+			<li>Floor size: 1900sqft</li> 
+			<li>RM 1.80 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Lifts, restrooms, car parking bays</li>
+		</ul>
+	</div>
+	</a>
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/large_sized_shop.jpg" class="products">
-	<!--Image taken from https://sognidarte.com/img/-->
-	<div class="bottom_left">Kuching</div>
-</div>
-<div class="showcase_text">
-	<h4>Large-sized shop</h4>
-	<ul>
-		<li>Monthly rate: RM 3,900</li> 
-		<li>Floor size: 3150sqft</li> 
-		<li>RM 2.00 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/large_sized_shop.jpg" class="products">
+		<!--Image taken from https://sognidarte.com/img/-->
+		<div class="bottom_left">Kuching</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Large-sized shop</h4>
+		<ul>
+			<li>Monthly rate: RM 3900</li> 
+			<li>Floor size: 3150sqft</li> 
+			<li>RM 2.00 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
+		</ul>
+	</div>
+	</a>
 
-<a href="enquiry.html" class="showcase_card_products">
-<div class="photo_container">
-	<img src="images/shops/premium_shop.jpg" class="products">
-	<!--Image taken from http://glamshops.net/reviews/porsche-store-design-in-singapore-->
-	<div class="bottom_left">Kuala Lumpur</div>
-</div>
-<div class="showcase_text">
-	<h4>Premium shop</h4>
-	<ul>
-		<li>Monthly rate: RM 11,500</li> 
-		<li>Floor size: 2900sqft</li> 
-		<li>RM 4.50 psf</li> 
-		<li>Fully furnished</li> 
-		<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
-	</ul>
-</div>
-</a>
+	<a href="enquiry.html" class="showcase_card_products">
+	<div class="photo_container">
+		<img src="images/shops/premium_shop.jpg" class="products">
+		<!--Image taken from http://glamshops.net/reviews/porsche-store-design-in-singapore-->
+		<div class="bottom_left">Kuala Lumpur</div>
+	</div>
+	<div class="showcase_text">
+		<h4>Premium shop</h4>
+		<ul>
+			<li>Monthly rate: RM 11,500</li> 
+			<li>Floor size: 2900sqft</li> 
+			<li>RM 4.50 psf</li> 
+			<li>Fully furnished</li> 
+			<li>Facilities: Escalator, lifts, restrooms, car parking bays</li>
+		</ul>
+	</div>
+	</a>
 
 <!-- End of photocard links -->
+
+</div> <!-- End of centering div -->
 
 <br/><br/><br/><br/>
 </div>
