Revert "changes from WA"
This reverts commit f44b3d9f7adb795e6d3f8b81f6ed22eadaf05226.

--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
 
 <br/>
 <hr/>
-<h5>Offices &#183 Apartments &#183 Houses &#183 Shops
-<br/>
-	<iframe width="720" height="480"
-		src="https://www.youtube.com/embed/oWOm2CkgoYo">
-	</iframe></h5>
-	
+<h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
 <div class="centering_index">
 	<img class="intro_photos" src="images/ind_thumbnail.jpg">
 	<img class="intro_photos" src="images/shop_thumbnail.jpg">
@@ -61,7 +56,6 @@
 <br/>
 <hr/>
 <br/>
-
 <p class="page_intro">
 	Finding your next home or commercial property begins with Beta Real Estate. 
 	We offer the best prices available on the market in all thirteen states in 
@@ -69,7 +63,7 @@
 	design.
 </p>
 <br/>
-<br/>
+	
 <div class="content_box">
 
 <br/>
