--- a/apartments.html
+++ b/apartments.html
@@ -52,6 +52,7 @@
 <h3>Apartments</h3>
 
 <!-- photocard links -->
+<div class="centering">
 
 
 <a href="enquiry.html" class="showcase_card_products">
@@ -157,6 +158,7 @@
 	</ul>
 </div>
 </a>
+</div>
 
 
 <!-- End of photocard links -->
