--- a/houses.html
+++ b/houses.html
@@ -51,6 +51,7 @@
 <h3>Houses</h3>
 
 <!-- photocard links -->
+<div class="centering">
 
 <a href="enquiry.html" class="showcase_card_products">
 <div class="photo_container">
@@ -222,6 +223,9 @@
 	</ul>
 </div>
 </a>
+
+</div>
+
 <!-- End of photocard links -->
 
 <br/><br/><br/><br/>
