--- a/offices.html
+++ b/offices.html
@@ -51,6 +51,7 @@
 <h3>Offices</h3>
 
 <!-- photocard links -->
+<div class="centering">
 
 <a href="enquiry.html" class="showcase_card_products">
 <div class="photo_container">
@@ -150,6 +151,7 @@
 	</ul>
 </div>
 </a>
+</div>
 
 
 <!-- End of photocard links -->
