--- a/product.html
+++ b/product.html
@@ -54,6 +54,7 @@
 <br/>
 <hr/>
 <br/>
+
 <div class="product_box">
 <h3>Residential Properties</h3>
 	<a href="apartments.html" class="product_card">
@@ -106,6 +107,7 @@
 
 <br/>
 <div class="content_banner">PROPERTIES FOR YOU</div>
+<div class="centering">
 
 <!-- photocard links -->
 
@@ -156,6 +158,9 @@
 	<p>Monthly rate: RM 1,400</p>
 </div>
 </a>
+
+</div>
+
 <br/><br/><br/><br/>
 </article>
 <br/>
