--- a/shops.html
+++ b/shops.html
@@ -54,6 +54,7 @@
 <h3>Shops</h3>
 
 <!-- photocard links -->
+<div class="centering">
 
 <a href="enquiry.html" class="showcase_card_products">
 <div class="photo_container">
@@ -162,6 +163,8 @@
 	</ul>
 </div>
 </a>
+
+</div>
 
 <!-- End of photocard links -->
 
