--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
 <br/>
 <hr/>
 <h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
+<div class="centering">
 <div class="centering_index">
 	<img class="intro_photos" src="images/ind_thumbnail.jpg">
 	<img class="intro_photos" src="images/shop_thumbnail.jpg">
 	<img class="intro_photos" src="images/off_thumbnail.jpg">
 	<img class="intro_photos" src="images/liv_thumbnail.jpg">
+</div>
 </div>
 <br/>
 <hr/>
@@ -68,6 +70,7 @@
 
 <br/>
 <div class="content_banner">LATEST PROJECTS</div>
+<div class="centering">
 
 <!-- photocard links -->
 
@@ -166,7 +169,7 @@
 	<p>Monthly rate: RM 3,900</p>
 </div>
 </a>
-
+</div>
 <!-- End of photocard links -->
 
 <br/><br/><br/><br/>
