--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
 <br/>
 <hr/>
 <br/>
-
+<div class="centering">
 <div class="product_box">
 <h3>Residential Properties</h3>
 	<a href="apartments.html" class="product_card">
@@ -101,6 +101,7 @@
 	shops to call your new working area
 	</div>
 	</a>
+</div>
 </div>
 	
 
