--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 <br/>
 <br/>
 <div class="content_banner">Members</div>
-<div class="centering_about">
+<div class="centering">
 	<a href="aboutme1.html" class="showcase_profile">
 	<img src="images/members/Ryan.jpeg" class="profile">
 	<p style="color: black;">Ryan Then<br/>Team Leader</p>
