Added youtube video enhancement

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
 	<img class="intro_photos" src="images/shop_thumbnail.jpg">
 	<img class="intro_photos" src="images/off_thumbnail.jpg">
 	<img class="intro_photos" src="images/liv_thumbnail.jpg">
+	<br/>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Ynr4o0eOjdg">
+</iframe>
 </div>
 </div>
+
+
 <br/>
 <hr/>
 <br/>
