--- a/about.html
+++ b/about.html
@@ -81,6 +81,8 @@
 	<img src="images/members/Jeffery.jpeg" class="profile">
 	<p style="color: black;">Jeffery Sia<br/>Team Member</p>
 	</a>
+	
+	<iframe width="1000" height="500" src="https://maps.google.com/maps?q=swinburne%20university&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
 </div>
 <br/>
 <br/>
