Added Location to About page

--- a/about.html
+++ b/about.html
@@ -81,8 +81,11 @@
 	<img src="images/members/Jeffery.jpeg" class="profile">
 	<p style="color: black;">Jeffery Sia<br/>Team Member</p>
 	</a>
-	
-	<iframe width="1000" height="500" src="https://maps.google.com/maps?q=swinburne%20university&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+</div>
+<div class="content_banner">Location</div>
+<div class="centering">
+</br>
+<iframe width="1000" height="500" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d63814.26666428048!2d110.357226!3d1.532263!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x69cbf290cfd24bb7!2sSwinburne+University+of+Technology+Sarawak+Campus!5e0!3m2!1sen!2smy!4v1554831591380!5m2!1sen!2smy" ></iframe>
 </div>
 <br/>
 <br/>
