--- a/aboutme2.html
+++ b/aboutme2.html
@@ -31,6 +31,7 @@
 
     <div class="container">
   <div class="avatar-flip">
+	<a name="flipanchor"></a>
     <img src="images/members/Alex.jpeg" alt="Alex Haider" height="150" width="150">
     <img src="images/members/Alex2.jpg" alt="Flipimg" height="150" width="150">
   </div>
