--- a/enhancements.html
+++ b/enhancements.html
@@ -1,27 +1,11 @@
-On a separate Web page called enhancements.html list and describe each enhancement you have made and
-how you have significantly extended the basic HTML and CSS beyond what is covered in the Labs. Hyperlink from
-the list to where the feature is implemented on your Web site. If it is a CSS feature, hyperlink to an example of
-the html that is selected by the CSS rule.
+<p>Describe each enhancement you have made and how you have significantly extended the basic HTML and CSS beyond what is covered in the Labs: <p/>
+<br/>
+<li><a href="aboutme2.html#flipanchor">Flip image effect enhancement hyperlink</a></li>
 
-<a href="aboutme2.html#flipanchor">Flip image enhancement hyperlink</a>
-<a href="index.html#youtubeanchor">Youtube video enhancement hyperlink</a>
-<a href="about.html#locationanchor">Google maps location enhancement hyperlink</a>
-I added an embedded youtube video as an enhancement. 
-Any enhancements that are not listed and linked on the Enhancements page will not be assessed. 
+<p>I added a flip image enhancement as an enhancement. It makes the site look more sleek and proffessional and makes profiles more unique. It gives the profiles more expression. Effects like these are harder to implement without other tools such as webkit or moz. I had to rely on transform, transition in order to achieve this. The assignment did not require any css effects but I thought it would be a good enhancement.</p>
+<li><a href="index.html#youtubeanchor">Youtube video enhancement hyperlink</a></li>
 
-Your Enhancements page must list the enhancements you have implemented. For each feature briefly
-explain:
- how it goes beyond the basic requirements of the assignment
- what code is needed to implement the feature
- if you have sourced your technique from a third party the source of this technique (e.g. URL) must be
-cited.
- a hyperlink to where you have applied that extension in your Web site (this is need so the tutor can
-quickly assess your enhancements during the demonstration).
- All enhancements must be able to run on Firefox. Make sure you check this.
-To gain a full 5 marks for a feature it must:
-• Be relevant to / enhance the content of the Web site
-• Be well described (as explained above)
-• Be non-trivial. Judging this will be at the sole discretion of your tutor/marker. As a guide if the
-enhancement has only taken a couple of lines of code it is likely to be trivial. 
+<p>I added an embedded youtube video as an enhancement. It gives the website a more user-friendly appeal beyond just photos. It gives the user more understanding on what the site is about. I had to use iframe and make sure it fit perfectly with the correct resolution and embedded the youtube link into it. I also had to make sure it was validated with HTML5. I got the idea from the assignment sheet for the enhancement. </p>
+<li><a href="about.html#locationanchor">Google maps location enhancement hyperlink</a></li>
 
-Enhancements to Specified Requirements listed and linked from enhancements.html 
+<p>I added an embedded Google maps location as an enhancement. I had to pick a longitude and latitude for the location that I needed. Finding live location wouldn't work as I need to tell the user where I am based. For that i used longitude and latitude to make sure its accurate and always working. I then used that embedded link, resized the iframe appropriately. The google api allows us to scroll and open the location in a new tab easily in order to get to the location. I got the idea from the assignment sheet for the enhancment. </p>
