--- a/aboutme2.html
+++ b/aboutme2.html
@@ -46,7 +46,10 @@
   </tr>
   <tr class = "Contributiontr">
     <td class= "Contributiontd">2. Product (Houses) Page</td>
+  <tr class = "Contributiontr">
+    <td class= "Contributiontd">3. Enhancements (Profile image flip effect, Embedded youtube video, Google Maps api)</td>	
 </table>
+
   <p id="aboutmep">I'm an international student studying in Swinburne Malaysia. What I enjoy learning about the most in CS is machine learning and blockchain.</p>
   <p id="aboutmep">My main hobbies are playing competitive games and going to the gym. I also enjoy taking photos and love photography. In my hometown we love to eat arabian foods such as shawarmas and kababs. I also have a pet dog named Ralph. </p>
   <p id="studentid">StudentID: 101222478</p>
