--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <!-- Change id to change banner photo. Leave the class alone. -->
 
-<header class="banner_photo" id="homepage_banner_photo">
+<header>
 	<div class="menu_banner">
 			<a href="index.html">Home</a>
 			<a href="enquiry.html">Enquiries</a>
@@ -37,16 +37,16 @@
 			</div>
 			<a id="active" class="menu_about" href="about.html">About Us</a>
 	</div>
-	<span class="headline">
-	<!-- Change this for different pages -->
-	<h1>About Us</h1>
-	</span>
 </header>
 
 <article>
 
 <!-- Main content here -->
 
+<br/>
+<br/>
+<br/>
+<h3>About Us</h3>
 <br/>
 <br/>
 <hr/>
