--- a/index.html
+++ b/index.html
@@ -48,28 +48,30 @@
 <hr/>
 <h5>Offices &#183 Apartments &#183 Houses &#183 Shops</h5>
 <div class="centering">
-<div class="centering_index">
 	<img class="intro_photos" src="images/ind_thumbnail.jpg">
 	<img class="intro_photos" src="images/shop_thumbnail.jpg">
 	<img class="intro_photos" src="images/off_thumbnail.jpg">
 	<img class="intro_photos" src="images/liv_thumbnail.jpg">
 	<br/>
-	<a name="youtubeanchor"></a>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/Ynr4o0eOjdg">
-</iframe>
-</div>
 </div>
 
-
-<br/>
-<hr/>
-<br/>
 <p class="page_intro">
 	Finding your next home or commercial property begins with Beta Real Estate. 
 	We offer the best prices available on the market in all thirteen states in 
 	Malaysia and provide an intuitive search experience with our unique website 
 	design.
 </p>
+<br/>
+<hr/>
+<br/>
+<br/>
+<div class="centering">
+	<a name="youtubeanchor"></a>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Ynr4o0eOjdg">
+</iframe>
+</div>
+
+<br/>
 <br/>
 	
 <div class="content_box">
