--- a/aboutme1.html
+++ b/aboutme1.html
@@ -49,9 +49,13 @@
   </tr>
   <tr class = "Contributiontr">
     <td class= "Contributiontd">3. Product page</td>
+  </tr>
+   <tr class = "Contributiontr">
+    <td class= "Contributiontd">4. Apartments page</td>
+  </tr>
 </table>
   <p id="aboutmep">Chinese Malaysian born and raised in Kuching, Sarawak.</p>
-  <p id="aboutmep">I am a student at Swinburne University. My main interests are reading and writing.</p>
+  <p id="aboutmep">I am a student at Swinburne University. My main interests are reading and writing. I run a blog in my free time and attend various local festivals to relax.</p>
   <p id="studentid">StudentID: 100086699</p>
 
 </div>
