--- a/product.html
+++ b/product.html
@@ -49,7 +49,7 @@
 <hr/>
 <br/>
 <p class="page_intro">
-	Properties for rent.
+	Take a look at our properties for rent. Choose from a wide selection of apartments, houses, shops and offices located at prime locations all over Malaysia.
 </p>
 <br/>
 <hr/>
